// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`FormInput should render with just required props passed 1`] = `
<div
  className="formInput"
>
=======
exports[`FormInput should render with label 1`] = `
<div
  className="formInput"
>
  <label
    htmlFor="test"
  >
    Testinput
  </label>
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
  <input
    id="test"
    onChange={[Function]}
    placeholder={null}
    type="text"
    value=""
  />
</div>
`;

<<<<<<< HEAD
exports[`FormInput should render with label 1`] = `
<div
  className="formInput"
>
  <label
    htmlFor="test"
  >
    Testinput
  </label>
=======
exports[`FormInput should render with required props 1`] = `
<div
  className="formInput"
>
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
  <input
    id="test"
    onChange={[Function]}
    placeholder={null}
    type="text"
    value=""
  />
</div>
`;
